[package]
name = "git-broom"
version = "0.3.0"
edition = "2021"
readme = "README.md"
license = "GPL-3"
repository = "https://github.com/Anasthase/git-broom"
description = "Helper tool to clean up local merged Git branches.\n\nDefine protected branches (comma-separated) with git configuration under the key `broom.protectedbranches`.\n\nEx: git config --local broom.protectedbranches main,develop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
gix-config = "0.23.0"
