[package]
name = "git-broom"
version = "0.4.0"
edition = "2021"
readme = "README.md"
license = "GPL-3"
repository = "https://github.com/Anasthase/git-broom"
description = "Helper tool to clean up local merged Git branches.\nDefine protected branches (comma-separated) with git configuration under the key `broom.protectedbranches`.\nEx: git config --local broom.protectedbranches main,develop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
fluent = "0.16.0"
fluent-langneg = "0.13.0"
gix-config = "0.25.1"
rust-embed = { version = "6.7.0", features = ["include-exclude"] }
sys-locale = "0.3.0"
unic-langid = { version = "0.9.1", features = ["macros"] }
